--- a/reservations.html
+++ b/reservations.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CarForYou - Responsive Car Dealer HTML5 Template</title>
+    <title><!DOCTYPE html>
+      <html lang="en">
+      <head>
+      <meta charset="UTF-8">
+      <title>CarForYou - Responsive Car Dealer HTML5 Template</title>
   <!--Bootstrap -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css">
   <!--Custome Style -->
@@ -64,6 +68,8 @@
                  style="background-color:#2dcc70;"> </a>
               <a href="#" data-switchcolor="purple" class="styleswitch"
                  style="background-color:#6054c2;"> </a>
+              <a href="#" data-switchcolor="grey" class="styleswitch"
+                 style="background-color:#626262;"> </a>
             </div>
           </div>
         </div>
@@ -122,166 +128,182 @@
 </header>
 <!-- /Header -->
 
-<!--Page Header-->
-<section class="page-header faq_page">
-  <div class="container">
-    <div class="page-header_wrap">
-      <div class="page-heading">
-        <h1>Services</h1>
-      </div>
-      <ul class="coustom-breadcrumb">
-        <li><a href="#">Home</a></li>
-        <li>Services</li>
-      </ul>
-    </div>
-  </div>
-  <!-- Dark Overlay-->
-  <div class="dark-overlay"></div>
-</section>
-<!-- /Page Header-->
-<section class="section-padding">
-  <div class="container">
-    <div class="section-header">
-      <h2>LI Limos, Car Service, Airport Service, more</h2>
-      <p class="mt-4">We enjoy giving our transportation service customers such great
-        treatment that they repeatedly use us again and again every time
-        they need airport transportation, limo transportation, or group
-        transportation on Long Island or anywhere throughout the New York area.</p>
-      <h2>Limo, SUV, Sedan options</h2>
-    </div>
-    <div class="row">
-      <div class="col-md-4 col-sm-4">
-        <article class="blog-list">
-          <div class="blog-info-box">
-            <div class="share_article">
-              <p><i class="fa fa-share-alt" aria-hidden="true"></i></p>
-              <ul>
-                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-              </ul>
-            </div>
-            <a href="#"><img src="assets/images/service/1.jpg" class="img-fluid" alt="image"></a>
+
+<!-- Filter-Form -->
+<section class="mb-5">
+  <div class="container mt-5 mb-5">
+    <div class="main_bg white-text">
+      <!--<div class="row">
+          <div class="col-lg-6">
+              <h3>Request a quote/ make a reservation</h3>
+              <h6>10% off when you get an online quote - Convenient payment options!</h6>
           </div>
-          <div class="blog-content">
-            <h5><a href="#">Airport transport</a></h5>
-            <p>Tri-State airports to or from Long Island –
-              use our dependable and affordable airport limos.
-              Call Or save 10% online with a quote!...</p>
-            <a href="#" class="btn-link">More Info <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a> </div>
-        </article>
-      </div>
-      <div class="col-md-4 col-sm-4">
-        <article class="blog-list">
-          <div class="blog-info-box">
-            <div class="share_article">
-              <p><i class="fa fa-share-alt" aria-hidden="true"></i></p>
-              <ul>
-                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-              </ul>
-            </div>
-            <a href="#"><img src="assets/images/service/2.jpg" class="img-fluid" alt="image"></a>
+          <div class="col-lg-6" align="right">
+              <img src="assets/card-image/Untitled-3.png" class="img-fluid"/>
           </div>
-          <div class="blog-content">
-            <h5><a href="#">Limos to Local Vineyards</a></h5>
-            <p>Enjoy one of Long Island’s many vineyards, with one of our
-              chaffeurs transporting your small or large group.
-              More info Call Or save 10% online with a quote!...</p>
-            <a href="#" class="btn-link">More Info <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a> </div>
-        </article>
       </div>
-      <div class="col-md-4 col-sm-4">
-        <article class="blog-list">
-          <div class="blog-info-box">
-            <div class="share_article">
-              <p><i class="fa fa-share-alt" aria-hidden="true"></i></p>
-              <ul>
-                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-              </ul>
-            </div>
-            <a href="#"><img src="assets/images/service/3.jpg" class="img-fluid" alt="image"></a>
-          </div>
-          <div class="blog-content">
-            <h5><a href="#">Long Island Business Limos</a></h5>
-            <p>Whether you’re meeting with a client or
-              colleagues or doing any other crucial business
-              task, dependable professional transportation
-              can help. Call Or save 10% online with a quote!...</p>
-            <a href="#" class="btn-link">More Info <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a> </div>
-        </article>
-      </div>
-    </div>
-        <div class="row mt-5">
-          <div class="col-md-4 col-sm-4">
-            <article class="blog-list">
-              <div class="blog-info-box">
-                <div class="share_article">
-                  <p><i class="fa fa-share-alt" aria-hidden="true"></i></p>
-                  <ul>
-                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                  </ul>
-                </div>
-                <a href="#"><img src="assets/images/service/4.jpg" class="img-fluid" alt="image"></a>
+      <form action="#" method="get">
+          <div class="row">
+              <div class="form-group col-md-3 col-sm-6">
+                  <label>Trip type:</label>
+                  <div class="select">
+                      <select class="form-control">
+                          <option value="one_way_to_airport">One-way TO Airport</option>
+                          <option value="one_way_from_airport">One-way FROM Airport</option>
+                          <option value="round_trip_airport">Round trip involving Airport</option>
+                          <option value="one_way_no_airport">One-way trip NOT involving Airport</option>
+                          <option value="round_trip_no_airport">Round trip NOT involving Airport</option>
+                          <option value="hourly">Hourly/multi-stop/tours</option>
+                      </select>
+                  </div>
               </div>
-              <div class="blog-content">
-                <h5><a href="#">Stretch Limos, Strech SUVs, Party Buses and more for all Occasions</a></h5>
-                <p>Using our chauffeured limousine services lets you focus on
-                  your event or occasion, and provides you with
-                  comfort and style...</p>
-                <a href="#" class="btn-link">More Info <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a> </div>
-            </article>
-          </div>
-          <div class="col-md-4 col-sm-4">
-            <article class="blog-list">
-              <div class="blog-info-box">
-                <div class="share_article">
-                  <p><i class="fa fa-share-alt" aria-hidden="true"></i></p>
-                  <ul>
-                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                  </ul>
-                </div>
-                <a href="#"><img src="assets/images/service/5.jpg" class="img-fluid" alt="image"></a>
+              <div class="form-group col-md-3 col-sm-6">
+                  <label>Pickup:</label>
+                  <div class="select">
+                      <select class="form-control">
+                          <option value="NY">New York</option>
+                          <option value="NJ">New Jersey</option>
+                          <option value="CT">Connecticut</option>
+                      </select>
+                  </div>
               </div>
-              <div class="blog-content">
-                <h5><a href="#">NYC Nightlife Limos</a></h5>
-                <p>A professional chauffeur with a limo can help keep your trip to LI area or
-                  NYC events, concerts, clubs, bars, and restaurants both
-                  memorable and safe...</p>
-                <a href="#" class="btn-link">More Info <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a> </div>
-            </article>
-          </div>
-          <div class="col-md-4 col-sm-4">
-            <article class="blog-list">
-              <div class="blog-info-box">
-                <div class="share_article">
-                  <p><i class="fa fa-share-alt" aria-hidden="true"></i></p>
-                  <ul>
-                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                  </ul>
-                </div>
-                <a href="#"><img src="assets/images/service/6.jpg" class="img-fluid" alt="image"></a>
+              <div class="form-group col-md-3 col-sm-6">
+                  <label>Dropoff: </label>
+                  <div class="select">
+                      <select class="form-control">
+                          <option value="JFK - New York JFK International Airport" selected="selected">JFK - NY
+                              JFK Int'l Airport
+                          </option>
+                          <option value="LGA - New York La Guardia Airport">LGA - New York La Guardia Airport
+                          </option>
+                          <option value="EWR - Newark International Airport">EWR - Newark International Airport
+                          </option>
+                          <option value="ISP - Long Island Islip Macarthur Airport">ISP - Long Island Islip
+                              Macarthur Airport
+                          </option>
+                          <option value="FRG - Republic Airport Farmingdale NY">FRG - Republic Airport Farmingdale
+                              NY
+                          </option>
+                          <option value="HPN - Westchester County Airport">HPN - Westchester County Airport
+                          </option>
+                          <option value="TEB - Teterboro, NJ Airport">TEB - Teterboro, NJ Airport</option>
+                      </select>
+                  </div>
               </div>
-              <div class="blog-content">
-                <h5><a href="#">Restaurant/ Club/ Bar transportation</a></h5>
-                <p>Keep the group together by all riding in a stretch limo together.
-                  Or rent a Party Bus for even larger groups and
-                  enjoy your night out. Call Or save 10% online with...</p>
-                <a href="#" class="btn-link">More Info <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a> </div>
-            </article>
+              <div class="form-group col-md-3 col-sm-6">
+                  <label></label>
+                  <button type="submit" class="btn btn-block">Continue <i class="fa fa-arrow-right"
+                                                                          aria-hidden="true"></i></button>
+              </div>
+          </div>
+      </form>-->
+
+      <div class="row">
+        <div class="col-lg-12">
+          <h3>Please fill out this form to get a Quote for your One-way trip from New York NY to JFK - New
+            York JFK International Airport.</h3>
+        </div>
+      </div>
+      <form action="#" method="get">
+        <div class="row">
+          <div class="form-group col-md-6 col-sm-12">
+            <label>What type of Vehicle are you interested in reserving?</label>
+            <div class="select">
+              <select class="form-control">
+                <option value="44">Luxury Sedan, 3-passenger</option>
+                <option value="122">Midsize SUV, 4-passenger</option>
+                <option value="20">SUV, 6-passenger</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-group col-md-6 col-sm-6">
+            <label>Trip Details: Pickup ? on</label>
+            <div class="row">
+              <div class="col-6">
+                <input type="date" class="form-control" min="2022-01-07" max="2022-01-09"/>
+              </div>
+              <div class="col-6">
+                <input type="time" class="form-control"/>
+              </div>
+            </div>
+          </div>
+          <div class="form-group col-md-6 col-sm-12">
+            <label>Address</label>
+            <input type="text" class="form-control"/>
+          </div>
+          <div class="form-group col-md-6 col-sm-12">
+            <label>City</label>
+            <div class="select">
+              <select class="form-control">
+                <option value="NY">New York</option>
+                <option value="NJ">New Jersey</option>
+                <option value="CT">Connecticut</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-group col-md-6 col-sm-6">
+            <label>Departing flight info (optional)</label>
+            <div class="row">
+              <div class="col-6">
+                <input type="text" class="form-control" placeholder="Airline"/>
+              </div>
+              <div class="col-6">
+                <input type="text" class="form-control" placeholder="#"/>
+              </div>
+            </div>
+          </div>
+          <div class="form-group col-md-6 col-sm-6">
+            <label>Departs at?</label>
+            <input type="time" class="form-control"/>
+          </div>
+          <div class="form-group col-sm-12">
+            <label>Note any EXTRA STOPS you want to make</label>
+            <textarea class="form-control" rows="4"></textarea>
+          </div>
+          <div class="form-group col-sm-12">
+            <h3>Passenger Info:</h3>
+          </div>
+          <div class="form-group col-md-6 col-sm-12">
+            <label>Passenger/Group's NAME</label>
+            <input type="text" class="form-control"/>
+          </div>
+          <div class="form-group col-md-6 col-sm-12">
+            <label>How many people in group?</label>
+            <input type="number" class="form-control" min="1"/>
+          </div>
+          <div class="form-group col-sm-12">
+            <h3>Contact Info for Quote:</h3>
+          </div>
+          <div class="form-group col-md-6 col-sm-12">
+            <label>Contact person's NAME</label>
+            <input type="text" class="form-control"/>
+          </div>
+          <div class="form-group col-md-6 col-sm-12">
+            <label>EMAIL ADDRESS</label>
+            <input type="email" class="form-control"/>
+            <p>*(To receive an email quote, enter a valid email address.)</p>
+          </div>
+          <div class="form-group col-sm-12">
+            <label>PHONE NUMBER:</label>
+            <input type="tel" class="form-control" placeholder="123-455-6789" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+          </div>
+          <div class="form-group col-sm-12">
+            <label>Note any SPECIAL NEEDS or concerns:</label>
+            <textarea class="form-control" rows="4"></textarea>
+          </div>
+          <div class="form-group col-md-3 col-sm-6">
+            <label></label>
+            <button type="submit" class="btn btn-block">Yes to Continue <i class="fa fa-arrow-right"
+                                                                           aria-hidden="true"></i></button>
           </div>
         </div>
+      </form>
+
+    </div>
   </div>
 </section>
+<!-- /Filter-Form -->
+
 
 <!--Footer -->
 <footer>
@@ -393,6 +415,11 @@
 <!--Slider-JS-->
 <script src="assets/js/slick.min.js"></script>
 <script src="assets/js/owl.carousel.min.js"></script>
+
+</body>
+</html></title>
+</head>
+<body>
 
 </body>
 </html></title>
