--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="carousel-inner">
             <!--item-1-->
             <div class="carousel-item active">
-                <img src="assets/images/banner-image-1.jpg" class="img-fluid" alt="image">
+                <img src="assets/images/banner/man-in-formalwear-leaning-at-the-car.jpg" class="img-fluid" alt="image">
                 <div class="carousel-caption">
                     <div class="banner_text text-center div_zindex white-text">
                         <h1>Long Island Car Service, more</h1>
@@ -148,7 +148,7 @@
 
             <!--item-2-->
             <div class="carousel-item">
-                <img src="assets/images/banner-image-2.jpg" alt="image" class="img-fluid">
+                <img src="assets/images/banner/manhattan-and-brooklyn-bridge.jpg" alt="image" class="img-fluid">
                 <div class="carousel-caption">
                     <div class="banner_text text-center div_zindex white-text">
                         <h1>Car service to JFK, LGA, Airports</h1>
@@ -160,7 +160,7 @@
 
             <!--item-3-->
             <div class="carousel-item">
-                <img src="assets/images/banner-image-1.jpg" alt="image" class="img-fluid">
+                <img src="assets/images/banner/flowercar.jpg" alt="image" class="img-fluid">
                 <div class="carousel-caption">
                     <div class="banner_text text-center div_zindex white-text">
                         <h1>Event, Corporate & Airport Transportation</h1>
@@ -207,9 +207,12 @@
                         <label>Trip type:</label>
                         <div class="select">
                             <select class="form-control">
-                                <option value="">Select Location</option>
-                                <option value="">Location 1</option>
-                                <option value="">Location 1</option>
+                                <option value="one_way_to_airport">One-way TO Airport</option>
+                                <option value="one_way_from_airport">One-way FROM Airport</option>
+                                <option value="round_trip_airport">Round trip involving Airport</option>
+                                <option value="one_way_no_airport">One-way trip NOT involving Airport</option>
+                                <option value="round_trip_no_airport">Round trip NOT involving Airport</option>
+                                <option value="hourly">Hourly/multi-stop/tours</option>
                             </select>
                         </div>
                     </div>
@@ -217,11 +220,9 @@
                         <label>Pickup:</label>
                         <div class="select">
                             <select class="form-control">
-                                <option>Select Brand</option>
-                                <option>Audi</option>
-                                <option>BMW</option>
-                                <option>Nissan</option>
-                                <option>Toyota</option>
+                                <option value="NY">New York</option>
+                                <option value="NJ">New Jersey</option>
+                                <option value="CT">Connecticut</option>
                             </select>
                         </div>
                     </div>
@@ -229,10 +230,22 @@
                         <label>Dropoff: </label>
                         <div class="select">
                             <select class="form-control">
-                                <option>Select Model</option>
-                                <option>Series 1</option>
-                                <option>Series 2</option>
-                                <option>Series 3</option>
+                                <option value="JFK - New York JFK International Airport" selected="selected">JFK - NY
+                                    JFK Int'l Airport
+                                </option>
+                                <option value="LGA - New York La Guardia Airport">LGA - New York La Guardia Airport
+                                </option>
+                                <option value="EWR - Newark International Airport">EWR - Newark International Airport
+                                </option>
+                                <option value="ISP - Long Island Islip Macarthur Airport">ISP - Long Island Islip
+                                    Macarthur Airport
+                                </option>
+                                <option value="FRG - Republic Airport Farmingdale NY">FRG - Republic Airport Farmingdale
+                                    NY
+                                </option>
+                                <option value="HPN - Westchester County Airport">HPN - Westchester County Airport
+                                </option>
+                                <option value="TEB - Teterboro, NJ Airport">TEB - Teterboro, NJ Airport</option>
                             </select>
                         </div>
                     </div>
